--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -327,6 +327,6 @@
       </div>
     </div>
 
-    <script src="js/modal.js"></script>
+    <script src="genius-homework-2/js/modal.js"></script>
   </body>
 </html>
