--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -302,7 +302,7 @@
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
                       <use
-                        href="/genius-homework-2/images/icons.svg#icon-instagram-footer"
+                        href="./images/icons.svg#icon-instagram-footer"
                       ></use>
                     </svg>
                   </a>
