--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -13,7 +13,7 @@
           <nav class="header-nav">
             <a href="#" class="first_logo">
               <svg width="74" height="43">
-                <use href="./genius-homework-2/images/icons.svg#icon-logo"></use>
+                <use href="./images/icons.svg#icon-logo"></use>
               </svg>
             </a>
             <ul class="header-menu">
