--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -31,7 +31,7 @@
                 <a href="#">
                   <svg width="32" height="32">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-telephone-receiver"
+                      href="./images/icons.svg#icon-telephone-receiver"
                     ></use>
                   </svg>
                 </a>
@@ -40,7 +40,7 @@
                 <a href="#">
                   <svg width="32" height="32">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-facebook"
+                      href="./images/icons.svg#icon-facebook"
                     ></use>
                   </svg>
                 </a>
@@ -49,7 +49,7 @@
                 <a href="#">
                   <svg width="32" height="32">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-instagram"
+                      href="./images/icons.svg#icon-instagram"
                     ></use>
                   </svg>
                 </a>
@@ -105,23 +105,23 @@
           </div>
           <div class="women-injection">
             <svg class="stars star_1" width="64" height="64">
-              <use href="/genius-homework-2/images/icons.svg#icon-star_1"></use>
+              <use href="./images/icons.svg#icon-star_1"></use>
             </svg>
             <svg class="stars star_2" width="40" height="40">
-              <use href="/genius-homework-2/images/icons.svg#icon-star_2"></use>
+              <use href="./images/icons.svg#icon-star_2"></use>
             </svg>
             <svg class="stars star_3" width="16" height="16">
-              <use href="/genius-homework-2/images/icons.svg#icon-star_3"></use>
+              <use href="./images/icons.svg#icon-star_3"></use>
             </svg>
 
             <img
               class="woman-before-injection"
-              src="/genius-homework-2/images/woman-before-injection.jpeg"
+              src="./images/woman-before-injection.jpeg"
               alt="Жінка до уколу"
             />
             <img
               class="woman-after-injection"
-              src="/genius-homework-2/images/woman-after-injection.jpeg"
+              src="./images/woman-after-injection.jpeg"
               alt="Жінка після уколу"
             />
           </div>
@@ -141,7 +141,7 @@
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-nuclear"
+                      href="./images/icons.svg#icon-nuclear"
                     ></use>
                   </svg>
                   <p>
@@ -153,7 +153,7 @@
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-medicine-soap"
+                      href="./images/icons.svg#icon-medicine-soap"
                     ></use>
                   </svg>
                   <p>
@@ -164,7 +164,7 @@
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-crown-light"
+                      href="./images/icons.svg#icon-crown-light"
                     ></use>
                   </svg>
                   <p>
@@ -186,7 +186,7 @@
                 <button class="carousel-button" type="button">
                   <svg width="16" height="16">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-Arrow-left"
+                      href="./images/icons.svg#icon-Arrow-left"
                     ></use>
                   </svg>
                 </button>
@@ -210,7 +210,7 @@
                 <button class="carousel-button right" type="button">
                   <svg width="16" height="16">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-Arrow-left"
+                      href="./images/icons.svg#icon-Arrow-left"
                     ></use>
                   </svg>
                 </button>
@@ -243,7 +243,7 @@
         <nav class="footer-nav">
           <a href="#" class="second-logo">
             <svg width="83" height="42">
-              <use href="/genius-homework-2/images/icons.svg#icon-logo"></use>
+              <use href="./images/icons.svg#icon-logo"></use>
             </svg>
           </a>
           <ul class="footer-menu">
@@ -282,7 +282,7 @@
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
                       <use
-                        href="/genius-homework-2/images/icons.svg#icon-telephone-receiver-footer"
+                        href="./images/icons.svg#icon-telephone-receiver-footer"
                       ></use>
                     </svg>
                   </a>
@@ -292,7 +292,7 @@
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
                       <use
-                        href="/genius-homework-2/images/icons.svg#icon-facebook-footer"
+                        href="./images/icons.svg#icon-facebook-footer"
                       ></use>
                     </svg>
                   </a>
