--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -13,7 +13,7 @@
           <nav class="header-nav">
             <a href="#" class="first_logo">
               <svg width="74" height="43">
-                <use href="/genius-homework-2/images/icons.svg#icon-logo"></use>
+                <use href="./images/icons.svg#icon-logo"></use>
               </svg>
             </a>
             <ul class="header-menu">
@@ -31,7 +31,7 @@
                 <a href="#">
                   <svg width="32" height="32">
                     <use
-                      href="/genius-homework-2/images/icons.svg#icon-telephone-receiver"
+                      href="./images/icons.svg#icon-telephone-receiver"
                     ></use>
                   </svg>
                 </a>
@@ -39,18 +39,14 @@
               <li>
                 <a href="#">
                   <svg width="32" height="32">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-facebook"
-                    ></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg width="32" height="32">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-instagram"
-                    ></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -105,23 +101,20 @@
           </div>
           <div class="women-injection">
             <svg class="stars star_1" width="64" height="64">
-              <use href="/genius-homework-2/images/icons.svg#icon-star_1"></use>
+              <use href="./images/icons.svg#icon-star_1"></use>
             </svg>
             <svg class="stars star_2" width="40" height="40">
-              <use href="/genius-homework-2/images/icons.svg#icon-star_2"></use>
+              <use href="./images/icons.svg#icon-star_2"></use>
             </svg>
             <svg class="stars star_3" width="16" height="16">
-              <use href="/genius-homework-2/images/icons.svg#icon-star_3"></use>
+              <use href="./images/icons.svg#icon-star_3"></use>
             </svg>
 
-            <img
-              class="woman-before-injection"
-              src="/genius-homework-2/images/woman-before-injection.jpeg"
-              alt="Жінка до уколу"
-            />
+            <img.-injection" src="./images/woman-before-injection.jpeg"
+            alt="Жінка до уколу" />
             <img
               class="woman-after-injection"
-              src="/genius-homework-2/images/woman-after-injection.jpeg"
+              src="./images/woman-after-injection.jpeg"
               alt="Жінка після уколу"
             />
           </div>
@@ -140,9 +133,7 @@
               <ul class="advantage-list advantage-list-flex">
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-nuclear"
-                    ></use>
+                    <use href="./images/icons.svg#icon-nuclear"></use>
                   </svg>
                   <p>
                     Всі наші косметологи мають <br />
@@ -152,9 +143,7 @@
                 </li>
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-medicine-soap"
-                    ></use>
+                    <use href="./images/icons.svg#icon-medicine-soap"></use>
                   </svg>
                   <p>
                     Використовуємо тільки професійне обладнання та косметику,
@@ -163,9 +152,7 @@
                 </li>
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-crown-light"
-                    ></use>
+                    <use href="./images/icons.svg#icon-crown-light"></use>
                   </svg>
                   <p>
                     Наша мета - підкреслити переваги та приховати недоліки, а не
@@ -185,9 +172,7 @@
               <div class="scroll-flex">
                 <button class="carousel-button" type="button">
                   <svg width="16" height="16">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-Arrow-left"
-                    ></use>
+                    <use href="./images/icons.svg#icon-Arrow-left"></use>
                   </svg>
                 </button>
                 <ul class="procedures-boxes">
@@ -209,9 +194,7 @@
                 </ul>
                 <button class="carousel-button right" type="button">
                   <svg width="16" height="16">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-Arrow-left"
-                    ></use>
+                    <use href="./images/icons.svg#icon-Arrow-left"></use>
                   </svg>
                 </button>
               </div>
@@ -243,7 +226,7 @@
         <nav class="footer-nav">
           <a href="#" class="second-logo">
             <svg width="83" height="42">
-              <use href="/genius-homework-2/images/icons.svg#icon-logo"></use>
+              <use href="./images/icons.svg#icon-logo"></use>
             </svg>
           </a>
           <ul class="footer-menu">
@@ -282,7 +265,7 @@
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
                       <use
-                        href="/genius-homework-2/images/icons.svg#icon-telephone-receiver-footer"
+                        href="./images/icons.svg#icon-telephone-receiver-footer"
                       ></use>
                     </svg>
                   </a>
@@ -291,9 +274,7 @@
                 <li>
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
-                      <use
-                        href="/genius-homework-2/images/icons.svg#icon-facebook-footer"
-                      ></use>
+                      <use href="./images/icons.svg#icon-facebook-footer"></use>
                     </svg>
                   </a>
                 </li>
@@ -302,7 +283,7 @@
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
                       <use
-                        href="/genius-homework-2/images/icons.svg#icon-instagram-footer"
+                        href="./images/icons.svg#icon-instagram-footer"
                       ></use>
                     </svg>
                   </a>
@@ -327,6 +308,6 @@
       </div>
     </div>
 
-    <script src="/genius-homework-2/js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
