--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -39,18 +39,14 @@
               <li>
                 <a href="#">
                   <svg width="32" height="32">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-facebook"
-                    ></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg width="32" height="32">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-instagram"
-                    ></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -116,7 +112,7 @@
 
             <img
               class="woman-before-injection"
-              src="/genius-homework-2/images/woman-before-injection.jpeg"
+              src="./images/woman-before-injection.jpeg"
               alt="Жінка до уколу"
             />
             <img
@@ -140,9 +136,7 @@
               <ul class="advantage-list advantage-list-flex">
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-nuclear"
-                    ></use>
+                    <use href="./images/icons.svg#icon-nuclear"></use>
                   </svg>
                   <p>
                     Всі наші косметологи мають <br />
@@ -152,9 +146,7 @@
                 </li>
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-medicine-soap"
-                    ></use>
+                    <use href="./images/icons.svg#icon-medicine-soap"></use>
                   </svg>
                   <p>
                     Використовуємо тільки професійне обладнання та косметику,
@@ -163,9 +155,7 @@
                 </li>
                 <li class="format-card">
                   <svg class="format-card-icon" width="48" height="48">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-crown-light"
-                    ></use>
+                    <use href="./images/icons.svg#icon-crown-light"></use>
                   </svg>
                   <p>
                     Наша мета - підкреслити переваги та приховати недоліки, а не
@@ -185,9 +175,7 @@
               <div class="scroll-flex">
                 <button class="carousel-button" type="button">
                   <svg width="16" height="16">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-Arrow-left"
-                    ></use>
+                    <use href="./images/icons.svg#icon-Arrow-left"></use>
                   </svg>
                 </button>
                 <ul class="procedures-boxes">
@@ -209,9 +197,7 @@
                 </ul>
                 <button class="carousel-button right" type="button">
                   <svg width="16" height="16">
-                    <use
-                      href="/genius-homework-2/images/icons.svg#icon-Arrow-left"
-                    ></use>
+                    <use href="./images/icons.svg#icon-Arrow-left"></use>
                   </svg>
                 </button>
               </div>
@@ -291,9 +277,7 @@
                 <li>
                   <a class="footer-icons" href="#">
                     <svg width="42" height="42">
-                      <use
-                        href="/genius-homework-2/images/icons.svg#icon-facebook-footer"
-                      ></use>
+                      <use href="./images/icons.svg#icon-facebook-footer"></use>
                     </svg>
                   </a>
                 </li>
