approved by validator

--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -243,7 +243,7 @@
             <li><a class="footer-link" href="#Contacts">Контакти</a></li>
           </ul>
 
-          <address>
+          <address class="footer-contacts-address">
             <ul class="footer-contacts">
               <li>
                 <a class="address-link" href="tel:+380960000007"
@@ -263,36 +263,31 @@
                   >Україна, м. Київ, <br />вул. Тараса Шевченка 5</a
                 >
               </li>
-              <div class="icon_links_footer">
-                <li>
-                  <a class="footer-icons" href="#">
-                    <svg width="42" height="42">
-                      <use
-                        href="./images/icons.svg#icon-telephone-receiver-footer"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <!-- call item -->
-                <li>
-                  <a class="footer-icons" href="#">
-                    <svg width="42" height="42">
-                      <use href="./images/icons.svg#icon-facebook-footer"></use>
-                    </svg>
-                  </a>
-                </li>
-                <!-- facebook item-->
-                <li>
-                  <a class="footer-icons" href="#">
-                    <svg width="42" height="42">
-                      <use
-                        href="./images/icons.svg#icon-instagram-footer"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-              </div>
-              <!-- insta item-->
+            </ul>
+            <ul class="icon_links_footer">
+              <li>
+                <a class="footer-icons" href="#">
+                  <svg width="42" height="42">
+                    <use
+                      href="./images/icons.svg#icon-telephone-receiver-footer"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="footer-icons" href="#">
+                  <svg width="42" height="42">
+                    <use href="./images/icons.svg#icon-facebook-footer"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="footer-icons" href="#">
+                  <svg width="42" height="42">
+                    <use href="./images/icons.svg#icon-instagram-footer"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </address>
           <div class="privacy-policy">
