push Merge branch 'main' of https://github.com/Stepanchik2005/Genius_Homework

--- a/genius-homework-2/index.html
+++ b/genius-homework-2/index.html
@@ -79,7 +79,7 @@
       <section class="section about-us-section" id="About_us">
         <div class="container about-us">
           <div class="about-us-section-main-flex">
-            <h2 class="section-title second-title">
+            <h2 class="section__title second-title">
               Перевтілюйтесь в <span class="accent">Beauty Zone!</span>
             </h2>
             <div class="about-us-text about-us-text-flex">
@@ -130,7 +130,7 @@
         >
           <div class="container people-choice">
             <div class="people-choice-flex">
-              <h2 class="people-choice-title section-title centered">
+              <h2 class="people-choice-title section__title centered">
                 Чому люди <span class="accent">обирають нас</span>
               </h2>
               <ul class="advantage-list advantage-list-flex">
@@ -169,7 +169,7 @@
         <section class="section" id="Our_procedures">
           <div class="container our-procedures">
             <div class="our-procedures-flex">
-              <h2 class="section-title">
+              <h2 class="section__title">
                 Наші <span class="accent">процедури</span>
               </h2>
               <div class="scroll-flex">
@@ -208,7 +208,7 @@
       <section class="section" id="Contacts">
         <div class="container how-find-us">
           <div class="last-section-flex">
-            <h2 class="section-title last-title">
+            <h2 class="section__title last-title">
               Як нас <span class="accent">знайти</span>
             </h2>
             <iframe
