--- a/genius-homework-3/index.html
+++ b/genius-homework-3/index.html
@@ -426,7 +426,7 @@
       </div>
     </footer>
 
-    <div class="backdrop__is-hidden modal modal__container">
+    <div class="backdrop modal modal__container backdrop__is-hidden">
       <div class="contacts-form">
         <button class="model-btn-close modal__button-close" type="button">
           Close
